--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
+html,
 body {
+    width: 100%;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
-    font-size: 3rem;
+    font-size: 16px;
     color: white;
     font-family: 'Lato', sans-serif;
     overflow-x: hidden;
+
 }
 
 .mainHeader {
-    background-color: #f9f9f9;
     width: 100vw;
-    height: 10vh;
+    background-color: #f9f9f9;
+    height: 80px;
     position: fixed;
     top: 0;
     text-align: center;
@@ -21,26 +25,26 @@ body {
 }
 
 .menuIconContainer {
-    height: 10vh;
+    height: 80px;
     position: absolute;
-    left: 1.5rem;
-    padding-top: 3rem;
+    left: 20px;
+    padding-top: 25px;
     box-sizing: border-box;
 }
 
 .menuIconContainer img {
-    width: 70px;
+    width: 30px;
 }
 
 .pageLogo {
-    margin-top: 1.5rem;
-    width: 300px;
+    margin-top: 10px;
+    width: 150px;
 }
 
 .sideMenu {
     position: fixed;
     top: 10vh;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
     height: 100vh;
     background-color: red;
@@ -48,32 +52,40 @@ body {
 }
 
 .mainSection {
+    width: 100vw;
     min-height: 100vh;
     box-sizing: border-box;
-    padding-top: 20vh;
+    padding-top: 120px;
     background-color: #1fc8db;
     background-image: linear-gradient(141deg, #53e8a6 0%, #1fc8db 51%, #2cb5e8 75%);
     text-align: center;
 }
 
+.mainSection img {
+    width: 250px;
+    margin-top: 2rem;
+}
+
 .mainSection header h1 {
-    margin-bottom: 0px;
+    font-size: 3rem;
+    margin: 0;
 }
 
 .mainSection header h4 {
-    margin-top: 1rem;
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 .keyFeaturesSection {
-    min-height: 100vh;
+    width: 100vw;
     box-sizing: border-box;
-    padding-top: 3rem;
     color: #242424;
     text-align: center;
 }
 
 .keyItem i {
-    font-size: 10rem;
+    margin-top: 1rem;
+    font-size: 5rem;
 }
 
 .keyItem:nth-child(1) i {
@@ -91,23 +103,29 @@ body {
 .keyItem h1 {
     font-size: 1.5rem;
     color: #000000;
-    margin-top: 3rem;
+}
+
+.keyItem p{
+    padding-left:1rem;
+    padding-right: 1rem;
 }
 
 .downloadSection {
-    min-height: 100vh;
+    width: 100vw;
     box-sizing: border-box;
-    padding-top: 3rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding: 1rem;
     background-color: #f7f7f7;
     color: #242424;
     text-align: center;
 }
 
+.downloadSection header h1 {
+    font-size: 2rem;
+}
+
 .downloadSection article {
     color: #575757;
-    font-size: 2rem;
+    font-size: 1rem;
     text-align: justify;
 
 }
@@ -116,17 +134,17 @@ body {
     margin-left: auto;
     margin-right: auto;
     box-sizing: border-box;
-    width: 70%;
-    height: 8rem;
-    padding-top: 1.5rem;
+    width: 250px;
+    height: 50px;
+    padding-top: 10px;
     background-color: #1fc8db;
     background-image: linear-gradient(141deg, #53e8a6 0%, #1fc8db 51%, #2cb5e8 75%);
     color: #f7f7f7;
-    font-size: 4rem;
-    letter-spacing: 10px;
+    font-size: 24px;
+    letter-spacing: 3px;
     text-align: center;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     border-radius: 64px;
 }
 
@@ -138,14 +156,13 @@ body {
 
 .downloadImageContainer img {
     width: 70%;
-    margin-top: 4rem;
     margin-bottom: 3rem;
 }
 
 .peopleSection {
-    min-height: 100vh;
+    width: 100vw;
     box-sizing: border-box;
-    padding: 3rem;
+    padding:1rem;
     background-color: #1fc8db;
     background-image: linear-gradient(141deg, #53e8a6 0%, #1fc8db 51%, #2cb5e8 75%);
     text-align: center;
@@ -153,22 +170,23 @@ body {
 
 .peopleSection .personCard {
     background-color: #f7f7f7;
-    margin-top: 8rem;
+    margin-top: 4rem;
     -webkit-box-shadow: 3px 3px 5px 0px rgba(184, 184, 184, 1);
     -moz-box-shadow: 3px 3px 5px 0px rgba(184, 184, 184, 1);
     box-shadow: 3px 3px 5px 0px rgba(184, 184, 184, 1);
     color: #242424;
-    padding: 3rem;
-    padding-top: 10rem;
+    padding: 1rem;
+    padding-top: 02rem;
     text-align: justify;
     position: relative;
 }
 
 .peopleSection .personCard img {
     position: absolute;
-    width: 30%;
-    top: -10%;
-    left: 35%;
+    width: 80px;
+    top: -30px;
+    left: 50%;
+    margin-left:-40px;
     border-radius: 50%;
     background-color: #ffffff;
 }
@@ -180,25 +198,25 @@ body {
 }
 
 .personCard .personName {
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 .personCard .personRole {
-    font-size: 1.5rem;
     color: #575757;
 }
 
 .brandSection {
-    min-height: 100vh;
+    width: 100vw;
     box-sizing: border-box;
-    padding-top: 3rem;
     color: #242424;
-    text-align: center;
 }
 
 .brandSection img {
-    width: 50%;
-    margin-top: 10rem;
+    display: block;
+    margin: auto;
+    width: 150px;
+    margin-top: 2rem;    
+    margin-bottom: 2rem;
     opacity: 0.7;
 }
 
@@ -208,47 +226,113 @@ body {
 }
 
 footer {
-    min-height: 50vh;
+    width: 100vw;
     box-sizing: border-box;
     text-align: center;
     background-color: #313131;
-    padding: 3rem;
+    padding: 1rem;
 }
 
-footer .footerElement{
+footer .footerElement {
     margin-bottom: 4rem;
     text-align: justify;
     font-size: 1rem;
 }
 
-footer .footerElement img{
-    width: 40%;
+footer .footerElement img {
+    width: 150px;
     display: block;
     margin: auto;
 }
 
-footer .footerElement:nth-of-type(1){
+footer .footerElement:nth-of-type(1) {
     text-align: center;
 }
 
-footer .footerElement i{
-    margin:3rem;
-    width:7rem;
-    height:7rem;
-    padding-top: 2rem;
+footer .footerElement i {
+    width: 50px;
+    height: 50px;
+    padding-top: 16px;
     border-radius: 50%;
     box-sizing: border-box;
     max-width: 25%;
     background-color: #797979;
     text-align: center;
+    margin-left:0.5rem;
+    margin-right:0.5rem;
+    margin-top:1rem;
 }
 
-footer .footerElement i:hover{
+footer .footerElement i:hover {
     cursor: pointer;
     background-color: #535353;
 }
 
-.footerCopyrights{
-    font-size:1rem;
+.footerCopyrights {
+    font-size: 1rem;
     color: gray
+}
+
+@media only screen and (min-width:800px){
+    .menuIconContainer{
+        display:none;
+    }
+    
+    .mainSection{
+        min-height:auto;
+        padding-bottom: 3rem;
+    }
+    
+    .mainSection header{
+        text-align: left;
+        display: inline-block;
+        vertical-align: top;
+        width:250px;
+        padding-top: 1.5rem;
+    }
+    
+    .mainSection header img{
+        text-align: left;
+        display: inline-block;
+    }
+    
+    .keyItem{
+        width:33%;
+        max-width: 400px;
+        display: inline-block;
+        margin-bottom: 1rem;
+    }
+    
+    .downloadSection .downloadDescription{
+        width:60%;
+        display: inline-block;
+        vertical-align: top
+    }
+    
+     .downloadSection .downloadImageContainer{
+        width:30%;
+        display: inline-block;
+        padding-top: 2rem;
+    }
+
+    .personCard{
+        width: 25%;
+        display: inline-block;
+        max-width: 400px;
+        margin-left:10px;
+        margin-right: 10px;
+        margin-bottom: 2rem;
+    }
+    
+    .brandSection {
+        text-align: center;
+    }
+    
+    .brandSection img{
+        max-width:200px;
+        display: inline-block;
+        box-sizing: border-box;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
